# kokkos_stream_mdrange

./: .gitmodules  CMakeLists.txt  README.md  stream-kokkos-2d-mdrange-tiling-scan.cpp  stream-kokkos-2d-mdrange.cpp  stream-kokkos-3d-mdrange-tiling-scan.cpp  stream-kokkos-3d-mdrange.cpp  stream-kokkos-4d-mdrange-rec-tiling.cpp  stream-kokkos-4d-mdrange-tiling-scan.cpp  stream-kokkos-4d-mdrange-tiling.cpp  stream-kokkos-4d-mdrange.cpp  stream-kokkos-4d-openmp-simd.cpp  stream-kokkos-4d-openmp.cpp  stream-kokkos-5d-mdrange.cpp  stream-kokkos-mdrange.cpp  stream-kokkos-range.cpp  stream-kokkos.cpp
compilation/amd_mi250/: do_cmake.sh  load_modules.sh
compilation/dual_epyc2_7742_gcc/: do_cmake.sh  load_modules.sh
compilation/dual_epyc3_7713/: do_cmake.sh  load_modules.sh
compilation/dual_epyc3_7713_clang/: do_cmake.sh
compilation/dual_xeon_8468/: do_cmake.sh  load_modules.sh
compilation/dual_xeon_8468_clang/: do_cmake.sh  load_modules.sh
compilation/nvidia_a100/: do_cmake.sh  load_modules.sh
run_scripts_and_results/: plot_results.R
run_scripts_and_results/a100/: run.sh
run_scripts_and_results/amd_mi250/: run.sh
run_scripts_and_results/dual_epyc3_7713/: run.sh
run_scripts_and_results/dual_epyc3_7713_clang/: run.sh
run_scripts_and_results/dual_xeon_8468/: run.sh
run_scripts_and_results/dual_xeon_8468_gcc/: run.sh
tiling_scan/: plot_results.R
tiling_scan/amd_mi250/: tiling_scan.sh
tiling_scan/dual_epyc2_7742_gcc/: tiling_scan.sh
tiling_scan/dual_xeon_8468_clang/: tiling_scan.sh
tiling_scan/nvidia_a100/: tiling_scan.sh
